--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/nghiaoi3/image/issues"
   },
-  "homepage": "https://github.com/nghiaoi3/image#readme"
+  "homepage": "https://github.com/nghiaoi3/image#readme",
+  "dependencies": {
+    "express": "^4.15.3",
+    "mongodb": "^2.2.28",
+    "mongoose": "^4.10.4"
+  }
 }
