--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.15.3",
     "mongodb": "^2.2.28",
-    "mongoose": "^4.10.4"
+    "mongoose": "^4.10.4",
+    "request": "^2.81.0"
   }
 }
